# text_dungeon

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  icon.svg.import  main.tscn  project.godot
auto_load/: global.gd  global.gd.uid  global.tscn  tooltip.gd  tooltip.gd.uid  tooltip.tscn
battle/: battle_calculator.gd  battle_options.gd  battle_result.gd  battle_system.gd  damage_calculator.gd  damage_result.gd  hit_calculator.gd
battle/battle_number_builder/: battle_number_builder.gd  battle_number_manager.gd  battle_option_builder.gd
core/: damage.gd
core/dice/: dice.gd  dice_result.gd
core/number_builder/: fixed_number_builder.gd  number_builder.gd  rand_number_builder.gd
core/range/: range.gd
docs/: 地图.md  数值获取器.md  数据统计.md  文字地牢.md
mobile/: Cargo.toml
mobile/src/: lib.rs
range/: range_result.gd
rfcs/: effect.md  战斗系统.md  数值发生器.md  模板.md  武器.md
src/: audio.rs  dev.rs  lib.rs  loading.rs  main.rs  menu.rs  player.rs  splash.rs  states.rs
src/actions/: mod.rs
src/battle/: battle_calculator.gd  battle_calculator.gd.uid  battle_item.gd  battle_item.gd.uid  battle_options.gd  battle_options.gd.uid  battle_result.gd  battle_result.gd.uid  battle_stats_effct.gd  battle_stats_effct.gd.uid  battle_system.gd  battle_system.gd.uid  damage_calculator.gd  damage_calculator.gd.uid  damage_result.gd  damage_result.gd.uid  damge_stats_effct.gd  damge_stats_effct.gd.uid  first_attack_judgment.gd  first_attack_judgment.gd.uid  hit_calculator.gd  hit_calculator.gd.uid  hit_result.gd  mod.rs  (+1 more)
stats/: stats.gd  stats_context.gd  stats_effect.gd  stats_state.gd
(+143 files in other folders)
